--- a/dada/extras/documentation/pod_source/features-digests.pod
+++ b/dada/extras/documentation/pod_source/features-digests.pod
@@ -6,10 +6,9 @@
 
 Digests can be enabled in the Bridge plugin. Under, B<Digest>, check the option, B<Enable Digests> and save your settings.
 
-
 =head2 Setting Frequency of Digests
 
-Under the, B<Enable Digests> setting, you may set the frequency of the messages sent out. Digest messges will not be sent out, if there are no messages sent between the last digest sent out, and whenever Dada Mail checks for new digests to be sent out. 
+Under the, B<Enable Digests> setting, you may set the frequency of the messages sent out. B<Note:> digest messages will not be sent out, if there are no messages sent between the last digest sent out, and whenever Dada Mail checks for new digests to be sent out. 
 
 =head2 Setting Delivery Preferences
 
@@ -17,7 +16,7 @@ Delivery Preferences can be set by both the List Owner, and individual subscribe
 
 =head3 List Owner
 
-In the List Control Panel navigate to, Membership - View and click on the address you would like to work with. Click the, B<Delivery Preferences> tab and choose among the three options for delivery: B<Receive Individual Messages>, B< Receive Messages in a Digest>, or, B<Hold Mailings>.
+In the List Control Panel navigate to, Membership - View and click on the address you would like to work with. Click the, B<Delivery Preferences> tab and choose among the three options for delivery: B<Receive Individual Messages>, B<Receive Messages in a Digest>, or, B<Hold Mailings>.
 
 =head3 Subscriber
 
@@ -25,9 +24,9 @@ A subscriber may log into their Profile (L<http://example.com/cgi-bin/dada/mail.
 
 =head2 Digest Email Template
 
-The Email Template for the digest message can be edited in Bridge. Click the, B<Customize Email Templates...> button and locate the template labeled, B< Digest Message> The Subject, as well PlainText and HTML versions of the Digest message may be customized. 
+The Email Template for the digest message can be edited in Bridge. Click the, B<Customize Email Templates...> button and locate the template labeled, B<Digest Message> The Subject, as well PlainText and HTML versions of the Digest message may be customized. 
 
-The following tag are supported: 
+The following tags are supported: 
 
 =head3 <!-- tmpl_var subscriber.* -->
 
@@ -82,5 +81,9 @@ Holds the PlainText version of the message originally sent out.
 =head3 html_message
 
 Holds the HTML version of the message originally sent out
+
+=head3 message_blurb
+
+Holds a PlainText snippet of the message originally sent.
 
 =cut
