Trying to wrap this up!

--- a/dada/extensions/FormMail/Dada-ized_FormMail_README.pod
+++ b/dada/extensions/FormMail/Dada-ized_FormMail_README.pod
@@ -64,7 +64,7 @@ The change history of these files
 
 List of files
 
-=item * Dada-ized_FormMail_README.pod
+=item Dada-ized_FormMail_README.pod
 
 The Dada-ized FormMail README. Instructions on how to install the Dada-ized FroMMail. 
 
