--- a/dada/extras/documentation/pod_source/changes_7_x.pod
+++ b/dada/extras/documentation/pod_source/changes_7_x.pod
@@ -9,31 +9,29 @@
 
 =head2 Features 7.4.0
 
-=head3 Digests
+=head3 Digest Messages
 
-Digest messages are messages that are created by taking the content of many messages sent in a timespan. See the feature overview of Digests, here: 
+Digest Messages are messages that are created by taking the content of many messages sent in a timespan, and putting them into a single message to then send out. See the feature overview of Digests here: 
 
 L<http://dadamailproject.com/d/features-digest.pod.html>
 
-Subscribers can now have the option of having individual messages delivered, a digest message delivered, or having message held from delivery.
+Subscribers can now have the option of having individual messages delivered, having a digest message delivered on a scheduled, or having messages that would have been delivered to them held from being delivered.
 
-The digest message sent out (Subject, PlainText version and HTML version)  can be fully customized. 
+Digest Messages that are sent out (Subject, PlainText version and HTML version) can be fully customized. 
 
-Way back in the day, Dada Mail had Digest support - it totall sucked. This new support totally doesn't.
+I<Way> back in the day, Dada Mail had Digest support - it totally stunk. This new support totally doesn't. We're really happy to finally roll out a replacement that we're proud of. 
 
-=head3 Scheduled Mass Mailings
+=head3 Schedules
 
-Dada Mail has had support for scheduled mailings since the inception of the Beatitude Plugin. That plugin has been marked as B<deprecated>, and we've taken one giant step in integrating scheduling of mass mailings into the core of Dada Mail with this release. 
+With B<Schedules>, any draft message you create can now be scheduled to be sent at a later time right from within the Send a Message, or Send a Webpage screens.
 
-Now, any draft message can be scheduled to be sent at a later time, from within the Send a Message or Send a Webpage screens. There's no need to switch to the plugin to schedule a mailing.
+To create a new Schedule, first go to the Send a Message, or Send a Webpage screen. Write your message! Then, click the, "B<Schedule...>" button. Tick, "Activate" and set the time in the future you would like your message to go out. Click, "Create Schedule" and you're done!
 
-We'll still ship with the Beatitude plugin, but it's days are numbered. 
+Once a message has been scheduled, you may edit the message (and even reuse the schedule, if you would like!). In the list control panel, Go to: I<Mass Mailing - Drafts/Stationary/Schedules>. Click the B<Schedules> tab to view all your schedules. 
 
-To create a new Schedule, first go to the Send a Message, or Send a Webpage screen. Write your message! Click the, "Schedule..." button. Tick, "Activate" and set the time in the future you would like your message to go out. Click, "Create Schedule" and, you're done!
+Important: make sure the Mailing Monitor's cronjob is also set up. (I<It should already be to make sure mass mailings go smoothly.>)
 
-Make sure the Mailing Monitor's cronob is also set up. (I<It should already be to make sure mass mailings go smoothly.>)
-
-Once a message has been scheduled, you can edit the schedule (and even reuse the schedule, if you would like!). In the list control panel, Go to: i<Mass Mailing - Drafts/Stationary/Schedules>. Click the B<Schedules> tab to view all your schedules. 
+Dada Mail has had support for scheduled mailings since the inception of the Beatitude Plugin. This plugin has been marked as B<Deprecated>, and we've taken one giant step in integrating scheduling of mass mailings into the core of Dada Mail with this release. We'll still ship with the Beatitude plugin, but (fair warning!) it's days are numbered. We'd like to integrate some more of its advanced features (recurring schedules), before we totally abandon ship on the plugin. 
 
 =head2 7.3.1
 
