--- a/dada/extras/documentation/pod_source/dada7_to_dada8.pod
+++ b/dada/extras/documentation/pod_source/dada7_to_dada8.pod
@@ -1,6 +1,10 @@
 =pod
 
-=head1
+=head1 Dada Mail 7 to Dada Mail 8 Upgrade Guide
+
+=head1 Perl Minimum Version: 5.10.1
+
+Dada Mail now requires v5.10.1 of Perl
 
 =head1 FastCGI Support
 
@@ -36,11 +40,25 @@ L<http://dadamailproject.com/d/features-scheduled_cronjobs.pod.html>
 
 =head2 SQL
 
-All the current SQL backends: SQLite, MySQL and PostgreSQL are still supported, but the Default Backend has finally been retired. 
+All the current SQL backends: SQLite, MySQL and PostgreSQL are still supported, but the B<Default (file-based) Backend has finally been retired>. If you are upgraded your Dada Mail to version 8, and are still running the Default Backend, you will need to migrate to one of the SQL backends.  
 
 =head1 Plugins
 
-Plugins work entirely different in v8 of Dada Mail. In prior versions, plugins were basically smaller apps that worked independently from the main Dada Mail app (mail.cgi). In v8, this isn't the case and plugins work as actual plugins to the main app. This is to keep the infrastructure of Dada Mail as simple as possible - there's only one app (run persistently if running under FastCGI) that needs to be dealt with. 
+Plugins work entirely different in v8 of Dada Mail. In prior versions, plugins were basically smaller apps that worked independently from the main Dada Mail app (mail.cgi). In v8, this isn't the case and plugins work as actual plugins to the main app. 
+
+You can see this reflecting in the URL to visit the plugin's control panel screen. Prior to v8, the URL would look like this, 
+
+L<http://example.com/cgi-bin/dada/plugins/plugin_name.cgi>
+
+In v8, they now look like this, 
+
+L<http://example.com/cgi-bin/dada/mail.cgi/plugins/plugin_name>
+
+You're now just called the mail.cgi script, and, C</plugins/plugin_name> are just paramaters passed in the C<PATH_INFO>. 
+ 
+This is to keep the infrastructure of Dada Mail as simple as possible - there's only one app (run persistently if running under FastCGI) that needs to be dealt with. 
+
+Some plugins had command line interfaces - those interfaces have all been removed in the name of simplicity. 
 
 =head2 Removed Plugins
 
@@ -57,5 +75,36 @@ Scheduling Mass Mailings is support within the core of Dada Mail, although recur
 =head3 default_mass_mailing_messages.cgi
 
 The core of Dada Mail now supports Stationary, which allows you to set multiple messages that you can use to start a new draft. 
+
+=head1 TODO
+
+=head2 Testing! 
+
+Other than FastCGI support, v8 does not have too many different features that differentiate it from v7. Under the hood, the framework for everything is very different. This means that pretty much anything could  be broken, and these bugs can only be found by testing everything out. 
+
+We could really use your feedback. Please contact us directly: 
+
+L<http://dadamailproject.com/contact/>
+
+Start a new thread, 
+
+L<http://dadamailproject.com/support/boards>
+
+or sign up and post to the dadadev mailing list: 
+
+L<http://dadamailproject.com/cgi-bin/dada/mail.cgi/list/dadadev/>
+
+And tell us how well Dada Mail 8 is working for you.
+
+We're most concerned about how Dada Mail is running under FastCGI - that's all new to us, and we're almost positive that there's some issues to work out in some particularily important parts of the app (mass mailing sending!) 
+
+=head2 Unfinished
+
+=head3 Command Line Tool for Installation 
+
+The command line tool to install Dada Mail has been lagging behind the web-based version, but now it's been entirely removed. 
+
+
+
 
 =cut
