--- a/dada/extras/documentation/pod_source/dada7_to_dada8.pod
+++ b/dada/extras/documentation/pod_source/dada7_to_dada8.pod
@@ -4,7 +4,7 @@
 
 =head1 Perl Minimum Version: 5.10.1
 
-Dada Mail now requires v5.10.1 of Perl
+Dada Mail now requires v5.10.1 of Perl, the previous minimum version was v5.8.1.
 
 =head1 FastCGI Support
 
@@ -14,7 +14,7 @@ L<http://dadamailproject.com/d/features-fastcgi.pod.html>
 
 In a nutshell, FastCGI allows you to run Dada Mail in a persistent environment. A persistent environment cuts out much of the startup time that happens when running Dada Mail as CGI script. 
 
-This time-savings really comes apparent if you have a busy website, where Dada Mail is being accessed many times a second. Switching between the two ways Dada Mail can be run (CGI and FastCGI) is fairly easy to do, and we suggest trying out Dada Mail has a plain CGI app, before moving to running it as a FastCGI app.
+This time-savings really becomes apparent if you have a busy website, where Dada Mail is being accessed many times a second. Switching between the two ways Dada Mail can be run (CGI and FastCGI) is fairly easy to do, and we suggest trying out Dada Mail as a plain CGI app, before moving to running it as a FastCGI app.
 
 =head1 CGI::Application-based
 
@@ -28,7 +28,7 @@ L<https://metacpan.org/pod/CGI::Application>
 
 Cronjobs in v8 are vastly simplified, with only one cronjob needing to be set, no matter what features and plugins you have enabled with Dada Mail. 
 
-Cronjobs created prior to v8 are no longer used in Dada Mail, so if you are upgrading, you will need to reset your cronjobs: remove the one's that existed for Dada Mail, and add the one cronjob that's now needed. 
+Cronjobs created prior to v8 are no longer used in Dada Mail, so if you are upgrading, you will need to reset your cronjobs: remove the one's that exist for Dada Mail, and add the one new cronjob that's now needed. 
 
 The cronjob that's needed will be shown at the last screen of the included installer, as well as in the List Control Panel, under: B<App Information -- Schedued Jobs> 
 
@@ -40,7 +40,9 @@ L<http://dadamailproject.com/d/features-scheduled_cronjobs.pod.html>
 
 =head2 SQL
 
-All the current SQL backends: SQLite, MySQL and PostgreSQL are still supported, but the B<Default (file-based) Backend has finally been retired>. If you are upgraded your Dada Mail to version 8, and are still running the Default Backend, you will need to migrate to one of the SQL backends.  
+All the current SQL backends: SQLite, MySQL and PostgreSQL are still supported, but the B<Default (file-based) Backend will finally be retired>. 
+
+If you are upgrading your Dada Mail to version 8, and are still running the Default Backend, you will need to migrate to one of the SQL backends.  
 
 =head1 Plugins
 
@@ -80,7 +82,7 @@ The core of Dada Mail now supports Stationary, which allows you to set multiple 
 
 =head2 Testing! 
 
-Other than FastCGI support, v8 does not have too many different features that differentiate it from v7. Under the hood, the framework for everything is very different. This means that pretty much anything could  be broken, and these bugs can only be found by testing everything out. 
+Other than FastCGI support, v8 does not have too many different features that differentiate it from v7. Although under the hood, the code organization and execution is very different. This means that pretty much anything could  be broken, and these bugs can only be found by testing everything out. 
 
 We could really use your feedback. Please contact us directly: 
 
@@ -90,9 +92,13 @@ Start a new thread,
 
 L<http://dadamailproject.com/support/boards>
 
-or sign up and post to the dadadev mailing list: 
+sign up and post to the dadadev mailing list: 
 
 L<http://dadamailproject.com/cgi-bin/dada/mail.cgi/list/dadadev/>
+
+or file an issue (please post the version you're using (ie: v8):
+
+L<https://github.com/justingit/dada-mail/issues>
 
 And tell us how well Dada Mail 8 is working for you.
 
@@ -100,11 +106,14 @@ We're most concerned about how Dada Mail is running under FastCGI - that's all n
 
 =head2 Unfinished
 
+Remember v8 is currently an ALPHA release, and shouldn't be put into production. 
+
 =head3 Command Line Tool for Installation 
 
 The command line tool to install Dada Mail has been lagging behind the web-based version, but now it's been entirely removed. 
 
+=head3 Bridge: using Email Forward for List Emails - Broken
 
-
+Mail Forwarding for List Email current does not work in v8. The command line interface has been removed from Bridge, as it has for all plugins. This leaves the problem of how to make a mail forward to pipes to a command. 
 
 =cut
