--- a/dada/extras/documentation/pod_source/features-scheduled_cronjobs.pod
+++ b/dada/extras/documentation/pod_source/features-scheduled_cronjobs.pod
@@ -68,6 +68,9 @@ By Default, this is set to, C<_verbose> which will print out the output for all 
 
 Another option is to supress the output in the cronjob itself, like this: 
 
+*/5 * * * * /usr/bin/curl  -s --get --url http://example.com/cgi-bin/dada/mail.cgi/_sched513A3F128C5C41EC/_all/_all/_verbose/ >/dev/null 2>&1 
+
+
 =head2 Running the scheduled jobs via the command line. 
 
 There's no special command-line way to run these jobs, although you can invoke Dada Mail on the command line easy enough. The following: 
