--- a/dada/extras/documentation/pod_source/dada7_to_dada8.pod
+++ b/dada/extras/documentation/pod_source/dada7_to_dada8.pod
@@ -8,17 +8,17 @@ Dada Mail now requires v5.10.1 of Perl, the previous minimum version was v5.8.1.
 
 =head1 FastCGI Support
 
-Dada Mail now has full FastCGI support! FastCGI support is explained in detail here: 
+Dada Mail now has FastCGI support! FastCGI support is explained in detail here: 
 
 L<http://dadamailproject.com/d/features-fastcgi.pod.html>
 
-In a nutshell, FastCGI allows you to run Dada Mail in a persistent environment. A persistent environment cuts out much of the startup time that happens when running Dada Mail as CGI script. 
+In a nutshell, FastCGI allows you to run Dada Mail in a persistent environment. A persistent environment cuts out much of the startup time that happens when running Dada Mail as a CGI script. 
 
 This time-savings really becomes apparent if you have a busy website, where Dada Mail is being accessed many times a second. Switching between the two ways Dada Mail can be run (CGI and FastCGI) is fairly easy to do, and we suggest trying out Dada Mail as a plain CGI app, before moving to running it as a FastCGI app.
 
 =head1 CGI::Application-based
 
-Dada Mail has been moved fully to the CGI::Application framework. This is one of the reasons we've been able to have FastCGI support. PSGI support could theoretically be easy to support as well, with a little tinkering. 
+Dada Mail has been fully moved to the CGI::Application framework. This is one of the reasons we've been able to have FastCGI support. PSGI support could theoretically be easy to support as well, with a little tinkering. 
 
 More on C<CGI::Application>: 
 
@@ -30,7 +30,7 @@ Cronjobs in v8 are vastly simplified, with only one cronjob needing to be set, n
 
 Cronjobs created prior to v8 are no longer used in Dada Mail, so if you are upgrading, you will need to reset your cronjobs: remove the ones that exist for Dada Mail, and add the one new cronjob that's now needed. 
 
-The cronjob that's needed will be shown at the last screen of the included installer, as well as in the List Control Panel, under: B<App Information -- Schedued Jobs> 
+The cronjob that's needed will be shown at the last screen of the included installer, as well as in the List Control Panel, under: B<App Information -- Scheduled Jobs> 
 
 This cronjob can be customized, and the output of the cronjob can be logged by Dada Mail - both these options can be configured in the Installer as well. See the docs on Scheduled Jobs in Dada Mail: 
 
@@ -46,7 +46,7 @@ If you are upgrading your Dada Mail to version 8, and are still running the Defa
 
 =head1 Plugins
 
-Plugins work entirely different in v8 of Dada Mail. In prior versions, plugins were basically smaller apps that worked independently from the main Dada Mail app (mail.cgi). In v8, this isn't the case and plugins work as actual plugins to the main app. 
+Plugins work entirely different in v8 of Dada Mail. In prior versions, plugins were basically smaller apps that worked independently from the main Dada Mail app (mail.cgi).  
 
 You can see this reflecting in the URL to visit the plugin's control panel screen. Prior to v8, the URL would look like this, 
 
@@ -72,7 +72,7 @@ The functionality of the C<mailing_monitor.cgi> plugin has been folded into the 
 
 Beatitude, after many years of being marked as, "deprecated", has been removed from Dada Mail. The biggest problem is that the internal architecture of Beatitude was just not going to work as a FastCGI app. 
 
-Scheduling Mass Mailings is support within the core of Dada Mail, although recurring schedules (run a message every day or every week, etc) are still not supported.
+Scheduling Mass Mailings is supported within the core of Dada Mail, although recurring schedules (run a message every day or every week, etc) are still not supported.
 
 =head3 default_mass_mailing_messages.cgi
 
@@ -107,14 +107,6 @@ We're most concerned about how Dada Mail is running under FastCGI - that's all n
 =head2 Unfinished
 
 Remember v8 is currently an ALPHA release, and shouldn't be put into production. 
-
-=head3 Command Line Tool for Installation 
-
-The command line tool to install Dada Mail has been lagging behind the web-based version, but now it's been entirely removed. 
-
-=head3 Bridge: using Email Forward for List Emails - Broken
-
-Mail Forwarding for List Email current does not work in v8. The command line interface has been removed from Bridge, as it has for all plugins. This leaves the problem of how to make a mail forward to pipes to a command. 
 
 =head3 FastCGI and Error Logs
 
